--- a/web/manifest.json
+++ b/web/manifest.json
@@ -1,6 +1,6 @@
 {
-    "name": "sample_project",
-    "short_name": "sample_project",
+    "name": "learn_bloc",
+    "short_name": "learn_bloc",
     "start_url": ".",
     "display": "standalone",
     "background_color": "#0175C2",
